--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,5 @@
-[build]
-command = "make build"
-functions = "functions"
-
 [build.environment]
-GO_VERSION = "1.17.6"
+GO_VERSION = "1.17"
 
-[functions]
-directory = "src/"
-
-[functions.hello-cronny]
-schedule = "@hourly"
+[functions.scheduled-function]
+schedule = " * * * * *"
